--- a/styles.css
+++ b/styles.css
@@ -19,28 +19,33 @@ button {
   font-size: 1.5rem;
 }
 
-/* ---------- HEADER ---------- */
+body {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  grid-template-rows: auto 1fr;
+  grid-template-areas:
+    "header header"
+    "left right";
+}
+
+/* ---------- TITLE ---------- */
 
 #title {
   color: #f1f5f9;
   font-size: 3rem;
   padding-bottom: 20px;
-}
-
-.text_display {
-  color: #f1f5f9;
-  font-size: 2rem;
-  display: flex;
-  justify-content: center;
-  padding-bottom: 20px;
+  padding-top: 20px;
+  padding-left: 20px;
+  grid-area: header;
 }
 
 /* ---------- MODE BOX ---------- */
 
-header {
+#left_body {
+  grid-area: left;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  padding-left: 20px;
 }
 
 #mode_box {
@@ -104,6 +109,19 @@ header {
 .button:visited {
   background-color: #1e293b;
   color: #e2e8f0;
+}
+
+/* ---------- TEXT DISPLAY ---------- */
+#right_body {
+  grid-area: right;
+}
+
+.text_display {
+  color: #f1f5f9;
+  font-size: 2rem;
+  display: flex;
+  justify-content: center;
+  padding-bottom: 20px;
 }
 
 /* ---------- GRID BOARD ---------- */
