--- a/styles.css
+++ b/styles.css
@@ -172,7 +172,8 @@ body {
   align-items: center;
 }
 
-#startBtn {
+#startBtn,
+#restartBtn {
   transition-duration: 0.4s;
   background-color: #e2e8f0;
   color: black;
@@ -182,12 +183,14 @@ body {
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-#startBtn:hover {
+#startBtn:hover,
+#restartBtn:hover {
   background-color: #1e293b;
   color: #e2e8f0;
 }
 
-#startBtn:active {
+#startBtn:active,
+#restartBtn:active {
   background-color: #1e293b;
   color: #e2e8f0;
   box-shadow: 0 5px #334155;
